[package]
name = "pristup"
version = "0.1.0"
edition = "2021"
authors = ["Darko Mesaros <d@rko.rs>"]
license = "MIT OR Apache-2.0"
keywords = ["aws", "iam"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
aws-config = "1.1.8"
aws-sdk-sts = { version = "1.17.0", features = ["rt-tokio"] }
aws-smithy-runtime-api = { version = "1.1.8", features = ["client"] }
aws-smithy-types = "1.1.8" 
aws-types = "1.1.8"
bytes = "1.5.0"
clap = { version = "4.5.2", features = ["derive"] }
reqwest = { version = "0.12.1", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_derive = "1.0.197"
serde_json = "1.0.114"
serde_urlencoded = "0.7.1"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.11"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"
urlencoding = "2.1.3"
